# test-exclude-paths-python-2

./: README.md  pyproject.toml
.github/: dependabot.yml
backend/: pyproject.toml
