[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "root-project"
version = "0.1.0"
description = "Root project with common dependencies"
dependencies = [
    "requests>=2.28.0",
    "redis~=5.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
