# Pure PEP 621 Poetry project (Poetry 2.x style)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pure-pep621-poetry-test"
version = "0.1.0"
description = "Test project using pure PEP 621 format with Poetry build backend"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Test Author", email = "test@example.com" }
]

dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "uvicorn==0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.1.0"
]

test = [
    "pytest-cov==4.0.0",
    "coverage==7.10.7"
]

[dependency-groups]
lint = [
    "flake8==6.0.0",
    "mypy==1.5.0"
]

typing = [
    "types-requests==2.31.0"
]
