[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend-project"
version = "0.1.0"
description = "Backend project with API dependencies"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
